--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
       <button class="navbar-toggler">&#9776;</button>
       <div class="navbar-brand">
         <h1>Leasing Híbridos</h1>
-        <img id="Logo" src="./assets/img/logo.jpg" alt="Leasing" />
+        <a href="https://github.com/Konscio/Desaf-o_animaciones" target="_blank">
+            <img id="Logo" src="./assets/img/logo.jpg" alt="Leasing" />
+        </a>
       </div>
       <div class="navbar-collapse">
         <ul class="navbar-nav">
